# v2r-irsend

./: .gitignore  CMakeLists.txt  README.md  v2r-irsend-test.sh
src/: CMakeLists.txt  main.c
